[gd_scene load_steps=3 format=3 uid="uid://biaknpf8etweh"]

[ext_resource type="Script" path="res://Prog115a.gd" id="1_nu1qk"]

[sub_resource type="Theme" id="Theme_bwcpm"]
default_font_size = 29

[node name="Prog115a" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_nu1qk")

[node name="list" type="ItemList" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -575.0
offset_right = 575.0
offset_bottom = 479.0
grow_horizontal = 2

[node name="btncalc" type="Button" parent="."]
modulate = Color(0.298039, 1, 0, 1)
layout_mode = 0
offset_left = 166.0
offset_top = 528.0
offset_right = 380.0
offset_bottom = 624.0
theme = SubResource("Theme_bwcpm")
text = "Calculate"

[node name="btnexit" type="Button" parent="."]
modulate = Color(1, 0, 0.0156863, 1)
layout_mode = 0
offset_left = 927.0
offset_top = 538.0
offset_right = 1141.0
offset_bottom = 634.0
theme = SubResource("Theme_bwcpm")
text = "Exit"

[node name="btnclear" type="Button" parent="."]
modulate = Color(0, 0.984314, 1, 1)
layout_mode = 0
offset_left = 453.0
offset_top = 525.0
offset_right = 667.0
offset_bottom = 621.0
theme = SubResource("Theme_bwcpm")
text = "Clear"

[connection signal="pressed" from="btncalc" to="." method="_on_btncalc_pressed"]
[connection signal="pressed" from="btnexit" to="." method="_on_btnexit_pressed"]
[connection signal="pressed" from="btnclear" to="." method="_on_btnclear_pressed"]
